# python-ethercat-master

./: .gitignore  README.md  pyproject.toml
docs/: web-interface.md
ethercat_master/: __init__.py  bus.py  ethercat_config.json  exceptions.py  network_test.py  pdo.py  pdo_mapping.json  slave.py  webserver.py
ethercat_master/webgui/: index.html  style.css
examples/: beckhoff.py  connect.py  mixed_bus.py
